Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,11 +1,11 @@
 ---
-description: "Bienvenido/a al ecosistema MetaQare, el primer sistema de salud digital completamente interoperable, descentralizado y centrado en el usuario. Este apartado sirve como introducción general a la arquitectura, filosofía y alcance del proyecto MetaQare, y constituye el punto de partida para todos los perfiles de usuario: pacientes, aseguradoras, médicos y administradores."
-title: "Acceso General | Manual MetaQare"
+description: "Bienvenido/a al ecosistema Qsalud.com, el primer sistema de salud digital completamente interoperable, descentralizado y centrado en el usuario. Este apartado sirve como introducción general a la arquitectura, filosofía y alcance del proyecto Qsalud, y constituye el punto de partida para todos los perfiles de usuario: pacientes, aseguradoras, médicos y administradores."
+title: "Acceso General | QSalud.com"
 ---
 
 ## Visión Global
 
-**MetaQare** es más que una plataforma: es la nueva infraestructura de la salud del siglo XXI. Diseñado para resolver las ineficiencias, sobrecargas y fragmentaciones de los sistemas sanitarios tradicionales, MetaQare combina:
+**QSalud **es más que una plataforma: es la nueva infraestructura de la salud del siglo XXI. Diseñado para resolver las ineficiencias, sobrecargas y fragmentaciones de los sistemas sanitarios tradicionales, MetaQare combina:
 
 - **Inteligencia Artificial** (IA) para diagnósticos, triaje y automatización asistencial.
 - **Blockchain** para trazabilidad, receta electrónica, reembolsos y gobernanza.
@@ -18,7 +18,7 @@ MetaQare se alinea con las principales tendencias globales descritas por McKinse
 
 > "El 63% de los europeos estaría dispuesto a consultar a un médico fuera de su país mediante plataformas digitales" — Eurobarómetro, 2022
 
-> "Los entornos con interoperabilidad FHIR\+IA han demostrado aumentar la eficiencia diagnóstica en un 35%" — WEF HealthTech Outlook, 2024
+> "Los entornos con interoperabilidad FHIR+IA han demostrado aumentar la eficiencia diagnóstica en un 35%" — WEF HealthTech Outlook, 2024
 
 ## Problemática Global
 
@@ -68,7 +68,7 @@ MetaQare aborda estas ineficiencias con un sistema basado en:
 
 ### 5. Red Médica (Qsalud)
 
-- 250\+ profesionales, 30 especialidades, cobertura 24/7
+- 250+ profesionales, 30 especialidades, cobertura 24/7
 - Operación nacional y posibilidad de refuerzo por especialidad o urgencia
 
 ---
