Documentation edits made through Mintlify web editor

--- a/en/quickstart.mdx
+++ b/en/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: "User Manuals"
-description: "Find guides and resources for patients, professionals, insurers, and more within the MetaQare ecosystem."
+description: "Find guides and resources for patients, professionals, insurers, and more within the QSalud ecosystem."
 ---
 
 <CardGroup cols={2}>
@@ -19,10 +19,15 @@ description: "Find guides and resources for patients, professionals, insurers, a
 </CardGroup>
 
 <Tip>
-  💡 <strong>Tip:</strong> Bookmark this page to always have the latest manuals at hand.
+  💡 Tip:
+
+   Bookmark this page to always have the latest manuals at hand.
 </Tip>
 
 <Note>
-  Need help? Visit our <a href="https://metaqare.ai/soporte" target="_blank">support section</a>
+  Need help? Visit our <a href="https://metaqare.ai/soporte" target="_blank">
+  support section</a>
+
+  
   or write to us via the platform chat.
 </Note>
