--- a/es/index.mdx
+++ b/es/index.mdx
@@ -1,24 +1,24 @@
 ---
-description: "Bienvenido/a al ecosistema MetaQare, el primer sistema de salud digital completamente interoperable, descentralizado y centrado en el usuario. Este apartado sirve como introducción general a la arquitectura, filosofía y alcance del proyecto MetaQare, y constituye el punto de partida para todos los perfiles de usuario: pacientes, aseguradoras, médicos y administradores."
-title: "Acceso General | Manual MetaQare"
+description: "Bienvenido/a al ecosistema QSalud, el primer sistema de salud digital completamente interoperable, descentralizado y centrado en el usuario. Este apartado sirve como introducción general a la arquitectura, filosofía y alcance del proyecto MetaQare, y constituye el punto de partida para todos los perfiles de usuario: pacientes, aseguradoras, médicos y administradores."
+title: "Acceso General | Manual QSalud"
 ---
 
 ## Visión Global
 
-**MetaQare** es más que una plataforma: es la nueva infraestructura de la salud del siglo XXI. Diseñado para resolver las ineficiencias, sobrecargas y fragmentaciones de los sistemas sanitarios tradicionales, MetaQare combina:
+**QSalud **es más que una plataforma: es la nueva infraestructura de la salud del siglo XXI. Diseñado para resolver las ineficiencias, sobrecargas y fragmentaciones de los sistemas sanitarios tradicionales, MetaQare combina:
 
 - **Inteligencia Artificial** (IA) para diagnósticos, triaje y automatización asistencial.
 - **Blockchain** para trazabilidad, receta electrónica, reembolsos y gobernanza.
 - **Telemedicina 24/7** con red propia o integrada con terceros.
 - **Interoperabilidad FHIR** que permite integración directa con sistemas como REMPE, SEOGA o CRMs aseguradores.
 
-MetaQare se alinea con las principales tendencias globales descritas por McKinsey, Deloitte, HIMSS y el World Economic Forum en sus reportes sobre el futuro de la atención sanitaria digital (2023–2025).
+QSalud se alinea con las principales tendencias globales descritas por McKinsey, Deloitte, HIMSS y el World Economic Forum en sus reportes sobre el futuro de la atención sanitaria digital (2023–2025).
 
 > "El 74% de los pacientes europeos buscan información sanitaria online antes de acudir a consulta" — Ministerio de Sanidad, 2023
 
 > "El 63% de los europeos estaría dispuesto a consultar a un médico fuera de su país mediante plataformas digitales" — Eurobarómetro, 2022
 
-> "Los entornos con interoperabilidad FHIR\+IA han demostrado aumentar la eficiencia diagnóstica en un 35%" — WEF HealthTech Outlook, 2024
+> "Los entornos con interoperabilidad FHIR+IA han demostrado aumentar la eficiencia diagnóstica en un 35%" — WEF HealthTech Outlook, 2024
 
 ## Problemática Global
 
@@ -29,7 +29,7 @@ La atención sanitaria a nivel mundial se enfrenta a:
 - **Cargas administrativas que saturan al profesional**
 - **Falta de seguimiento, prevención y continuidad asistencial**
 
-MetaQare aborda estas ineficiencias con un sistema basado en:
+QSalud aborda estas ineficiencias con un sistema basado en:
 
 - Historia clínica unificada
 - IA para triaje clínico y NLP
@@ -40,7 +40,7 @@ MetaQare aborda estas ineficiencias con un sistema basado en:
 
 ## Componentes Clave del Ecosistema
 
-### 1. Plataforma MetaQare
+### 1. Plataforma QSalud
 
 - Modular, personalizable, cloud-native
 - Arquitectura SaaS, segura y escalable
@@ -68,14 +68,14 @@ MetaQare aborda estas ineficiencias con un sistema basado en:
 
 ### 5. Red Médica (Qsalud)
 
-- 250\+ profesionales, 30 especialidades, cobertura 24/7
+- 250+ profesionales, 30 especialidades, cobertura 24/7
 - Operación nacional y posibilidad de refuerzo por especialidad o urgencia
 
 ---
 
 ## Seguridad, Cumplimiento y Confianza
 
-MetaQare está alineado con los más altos estándares de compliance:
+QSalud está alineado con los más altos estándares de compliance:
 
 - RGPD y LOPDGDD (EU)
 - ENS (Esquema Nacional de Seguridad)
@@ -113,4 +113,4 @@ Esta documentación se estructura por perfiles:
 
 ---
 
-> “MetaQare no es una app. Es la nueva infraestructura digital de la salud. Global, segura, y lista para escalar.”
+> “QSalud no es una app. Es la nueva infraestructura digital de la salud. Global, segura, y lista para escalar.”
