--- a/es/quickstart.mdx
+++ b/es/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Manuales de uso"
-description: "Encuentra aquí las guías y recursos para pacientes, profesionales, aseguradoras y mucho más dentro del ecosistema MetaQare."
+description: "Encuentra aquí las guías y recursos para pacientes, profesionales, aseguradoras y mucho más dentro del ecosistema QSalud."
 ---
 
 <CardGroup cols={2}>
@@ -24,7 +24,8 @@ description: "Encuentra aquí las guías y recursos para pacientes, profesionale
 
 <Note>
   ¿Necesitas ayuda? Revisa nuestra <a href="https://metaqare.ai/soporte" target="_blank">
+  
   sección de soporte</a>
 
-   o escríbenos desde el chat de la plataforma.
+  o escríbenos desde el chat de la plataforma.
 </Note>
