--- a/index.mdx
+++ b/index.mdx
@@ -5,14 +5,14 @@ title: "Acceso General | QSalud.com"
 
 ## Visión Global
 
-**QSalud **es más que una plataforma: es la nueva infraestructura de la salud del siglo XXI. Diseñado para resolver las ineficiencias, sobrecargas y fragmentaciones de los sistemas sanitarios tradicionales, MetaQare combina:
+\*\*QSalud \*\*es más que una plataforma: es la nueva infraestructura de la salud del siglo XXI. Diseñado para resolver las ineficiencias, sobrecargas y fragmentaciones de los sistemas sanitarios tradicionales, QSalud combina:
 
 - **Inteligencia Artificial** (IA) para diagnósticos, triaje y automatización asistencial.
 - **Blockchain** para trazabilidad, receta electrónica, reembolsos y gobernanza.
 - **Telemedicina 24/7** con red propia o integrada con terceros.
 - **Interoperabilidad FHIR** que permite integración directa con sistemas como REMPE, SEOGA o CRMs aseguradores.
 
-MetaQare se alinea con las principales tendencias globales descritas por McKinsey, Deloitte, HIMSS y el World Economic Forum en sus reportes sobre el futuro de la atención sanitaria digital (2023–2025).
+QSalud se alinea con las principales tendencias globales descritas por McKinsey, Deloitte, HIMSS y el World Economic Forum en sus reportes sobre el futuro de la atención sanitaria digital (2023–2025).
 
 > "El 74% de los pacientes europeos buscan información sanitaria online antes de acudir a consulta" — Ministerio de Sanidad, 2023
 
@@ -29,7 +29,7 @@ La atención sanitaria a nivel mundial se enfrenta a:
 - **Cargas administrativas que saturan al profesional**
 - **Falta de seguimiento, prevención y continuidad asistencial**
 
-MetaQare aborda estas ineficiencias con un sistema basado en:
+QSalud aborda estas ineficiencias con un sistema basado en:
 
 - Historia clínica unificada
 - IA para triaje clínico y NLP
@@ -75,7 +75,7 @@ MetaQare aborda estas ineficiencias con un sistema basado en:
 
 ## Seguridad, Cumplimiento y Confianza
 
-MetaQare está alineado con los más altos estándares de compliance:
+QSalud está alineado con los más altos estándares de compliance:
 
 - RGPD y LOPDGDD (EU)
 - ENS (Esquema Nacional de Seguridad)
@@ -113,4 +113,4 @@ Esta documentación se estructura por perfiles:
 
 ---
 
-> “MetaQare no es una app. Es la nueva infraestructura digital de la salud. Global, segura, y lista para escalar.”
+> “QSalud no es una app. Es la nueva infraestructura digital de la salud. Global, segura, y lista para escalar.”
