--- a/en/index.mdx
+++ b/en/index.mdx
@@ -1,19 +1,18 @@
 ---
-description: "Welcome to the MetaQare ecosystem — a unified healthcare platform designed for multiple user types: patients, insurers, clinicians, and administrators."
-title: "General Access | MetaQare Manual"
+description: "Welcome to the QSalud ecosystem — a unified healthcare platform designed for multiple user types: patients, insurers, clinicians, and administrators."
+title: "General Access | QSalud Manual"
 ---
 
 ## Global Overview
 
-**MetaQare** is more than a platform — it’s the new digital infrastructure for healthcare. 
-Building on the limitations of traditional health systems, MetaQare brings together:
+**QSalud **is more than a platform — it’s the new digital infrastructure for healthcare. Building on the limitations of traditional health systems, QSalud brings together:
 
 - **Artificial Intelligence (AI)** for diagnostics, triage, and care automation.
 - **Blockchain** for traceability, e‑prescriptions, reimbursements, and governance.
 - **24/7 Telemedicine** with our own network or integrated third‑party networks.
 - **FHIR Interoperability** enabling direct integration with systems such as REMPE, SEOGA, or insurer CRMs.
 
-MetaQare aligns with the main global trends described in leading reports on the future of digital health (2023–2025).
+QSalud aligns with the main global trends described in leading reports on the future of digital health (2023–2025).
 
 > "63% of Europeans would be willing to consult a doctor outside their country through digital platforms." — Eurobarometer, 2022
 
@@ -28,10 +27,11 @@ Healthcare systems worldwide face:
 - **Administrative burdens that overwhelm clinicians**
 - **Lack of follow‑up, prevention, and continuity of care**
 
-MetaQare addresses these inefficiencies with an accessible, interoperable, and secure system that puts people at the center.
+QSalud addresses these inefficiencies with an accessible, interoperable, and secure system that puts people at the center.
 
-**Contact**  
-- Support WhatsApp: **+34 623 25 77 57**  
+**Contact**
+
+- Support WhatsApp: **\+34 623 25 77 57**
 - 24/7 Medical Support: **900 868 565**
 
 ---
@@ -45,4 +45,4 @@ MetaQare addresses these inefficiencies with an accessible, interoperable, and s
 
 ---
 
-> “MetaQare is not an app. It’s the new digital health infrastructure — global, secure, and ready to scale.”
+> “QSalud is not an app. It’s the new digital health infrastructure — global, secure, and ready to scale.”
